Keymap: Context operators are broken when running Reload Scripts #113309

Closed
opened 2023-10-05 23:22:58 +02:00 by Demeter Dzadik · 11 comments
Member

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-05 00:26, hash: bd6b7088bf40
Worked: Was also broken in 4.0 as of 09/22. But unsure when it broke exactly.

Caused by 88a875ec3a

Short description of error
When running Reload Scripts, all shortcuts of context_toggle and other context-based operators seem to lose their context path.

Exact steps for others to reproduce the error

  • Factory settings
  • Press N/T keys, which are context toggles
  • Run the Reload Scripts operator
  • N/T keys immediately cease functioning, along with some other context based operators (I think not all of them).
  • Looking at the N/T hotkeys in the Keymap Preferences reveals that their context path property has been reset to default.

This is catastrophic when users have custom shortcuts for such operators, and the Auto-Save Preferences option enabled; User keymaps will be broken and saved. For this reason, if this bug gets confirmed, I would request it to be high priority.

I've already had @TinyNick successfully reproduce the issue.

**Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-10-05 00:26, hash: `bd6b7088bf40` Worked: Was also broken in 4.0 as of 09/22. But unsure when it broke exactly. Caused by 88a875ec3a **Short description of error** When running Reload Scripts, all shortcuts of `context_toggle` and other context-based operators seem to lose their context path. **Exact steps for others to reproduce the error** - Factory settings - Press N/T keys, which are context toggles - Run the Reload Scripts operator - N/T keys immediately cease functioning, along with some other context based operators (I think not all of them). - Looking at the N/T hotkeys in the Keymap Preferences reveals that their context path property has been reset to default. **This is catastrophic when users have custom shortcuts for such operators, and the Auto-Save Preferences option enabled; User keymaps will be broken and saved. For this reason, if this bug gets confirmed, I would request it to be high priority.** I've already had @TinyNick successfully reproduce the issue.
Demeter Dzadik added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2023-10-05 23:22:59 +02:00

I can confirm I was able to replicate this issue on my side

I can confirm I was able to replicate this issue on my side
Member

I can confirm the regression, bisecting.

I can confirm the regression, bisecting.
Member

Caused by 88a875ec3a
@ideasman42 ^

Caused by 88a875ec3ae89b7a6d31b398aad02a415b519694 @ideasman42 ^
Author
Member

That was also a fix for a bug I reported. I feel responsible... 😂 I'm sorry, world.

That was also a fix for a bug I reported. I feel responsible... 😂 I'm sorry, world.
Pratik Borhade added this to the 4.0 milestone 2023-10-11 06:44:51 +02:00
Campbell Barton self-assigned this 2023-10-13 03:41:48 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-13 05:38:53 +02:00
Author
Member

I believe this needs to be backported to 4.0 still.

I believe this needs to be backported to 4.0 still.
Member

@Mets , fix has been pushed to both 4.0 and main branch

@Mets , fix has been pushed to both 4.0 and main branch
Author
Member

Then I might have some bad news, because I can still repro this on 4.0 from today's buildbot.

Then I might have some bad news, because I can still repro this on 4.0 from today's buildbot.
Member

@Mets, 4.0 / 4.1 build on website has not updated for past 3 days due to failing test (13 Oct - 1c4b2ad17f5f54e35924974003faff40b5ad34d2)
So the build you're using is not really "today's" build 🙂

@Mets, 4.0 / 4.1 build on website has not updated for past 3 days due to failing test (13 Oct - `1c4b2ad17f5f54e35924974003faff40b5ad34d2`) So the build you're using is not really "today's" build 🙂

Maybe I'm missing something but I have 4.0.2 installed and the issue still appears, is this something that's planned for 4.1?
Full context is that I used 3.4.1 before and loaded those settings when starting 4.0.2 for the first time and it loaded all the settings correctly (as far as I can tell anyway) but as soon as I reload scripts it resets them.

Maybe I'm missing something but I have 4.0.2 installed and the issue still appears, is this something that's planned for 4.1? Full context is that I used 3.4.1 before and loaded those settings when starting 4.0.2 for the first time and it loaded all the settings correctly (as far as I can tell anyway) but as soon as I reload scripts it resets them.
Member

@IihT2cWA9xiP30BsYphz3EiEISNoScoe hi, I'm not able to confirm this with add-ons keymap and blender_defaults.py
Perhaps you can open a new report with necessary information

@IihT2cWA9xiP30BsYphz3EiEISNoScoe hi, I'm not able to confirm this with add-ons keymap and blender_defaults.py Perhaps you can open a new report with necessary information

I created this ticket

I created [this](https://projects.blender.org/blender/blender/issues/116778) ticket
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113309
No description provided.