Fix #113309: Broken key-map after "Reload Scripts"

Regression caused by [0]. Resolve by adding a 'keep_properties' argument
to KeyConfig.update so the key-map items can be restored after the
operators have been reloaded.

[0]: 88a875ec3ae89b7a6d31b398aad02a415b519694