source/blender/windowmanager/intern/wm_keymap.cc
@@ -94,6 +94,17 @@ static void wm_keymap_item_free_data(wmKeyMapItem *kmi)
   }
 }
 
+static void wm_keymap_item_clear_runtime(wmKeyMapItem *kmi)
+{
+  IDProperty *properties = kmi->properties;
+  kmi->properties = nullptr;
+  if (kmi->ptr) {
+    kmi->ptr->data = nullptr;
+  }
+  wm_keymap_item_free_data(kmi);
+  kmi->properties = properties;
+}
+
 static void wm_keymap_item_properties_set(wmKeyMapItem *kmi)
 {
   WM_operator_properties_alloc(&(kmi->ptr), &(kmi->properties), kmi->idname);
@@ -107,7 +118,7 @@ static void wm_keymap_item_properties_set(wmKeyMapItem *kmi)
  * Similar to #wm_keymap_item_properties_set
  * but checks for the #wmOperatorType having changed, see #38042.
  */
-static void wm_keymap_item_properties_update_ot(wmKeyMapItem *kmi)
+static void wm_keymap_item_properties_update_ot(wmKeyMapItem *kmi, const bool keep_properties)
 {
   if (kmi->idname[0] == 0) {
     BLI_assert(kmi->ptr == nullptr);
@@ -137,25 +148,31 @@ static void wm_keymap_item_properties_update_ot(wmKeyMapItem *kmi)
       }
     }
     else {
-      /* zombie keymap item */
-      wm_keymap_item_free_data(kmi);
+      /* Zombie key-map item. */
+      if (keep_properties) {
+        wm_keymap_item_clear_runtime(kmi);
+      }
+      else {
+        wm_keymap_item_free_data(kmi);
+      }
     }
   }
 }
 
-static void wm_keymap_item_properties_update_ot_from_list(ListBase *km_lb)
+static void wm_keymap_item_properties_update_ot_from_list(ListBase *km_lb,
+                                                          const bool keep_properties)
 {
   LISTBASE_FOREACH (wmKeyMap *, km, km_lb) {
     LISTBASE_FOREACH (wmKeyMapItem *, kmi, &km->items) {
-      wm_keymap_item_properties_update_ot(kmi);
+      wm_keymap_item_properties_update_ot(kmi, keep_properties);
     }
 
     LISTBASE_FOREACH (wmKeyMapDiffItem *, kmdi, &km->diff_items) {
       if (kmdi->add_item) {
-        wm_keymap_item_properties_update_ot(kmdi->add_item);
+        wm_keymap_item_properties_update_ot(kmdi->add_item, keep_properties);
       }
       if (kmdi->remove_item) {
-        wm_keymap_item_properties_update_ot(kmdi->remove_item);
+        wm_keymap_item_properties_update_ot(kmdi->remove_item, keep_properties);
       }
     }
   }
@@ -1874,6 +1891,11 @@ static wmKeyMap *wm_keymap_preset(wmWindowManager *wm, wmKeyMap *km)
 
 void WM_keyconfig_update(wmWindowManager *wm)
 {
+  WM_keyconfig_update_ex(wm, false);
+}
+
+void WM_keyconfig_update_ex(wmWindowManager *wm, bool keep_properties)
+{
   bool compat_update = false;
 
   if (wm_keymap_update_flag == 0) {
@@ -1883,9 +1905,9 @@ void WM_keyconfig_update(wmWindowManager *wm)
   if (wm_keymap_update_flag & WM_KEYMAP_UPDATE_OPERATORTYPE) {
     /* One or more operator-types have been removed, this won't happen often
      * but when it does we have to check _every_ key-map item. */
-    wm_keymap_item_properties_update_ot_from_list(&U.user_keymaps);
+    wm_keymap_item_properties_update_ot_from_list(&U.user_keymaps, keep_properties);
     LISTBASE_FOREACH (wmKeyConfig *, kc, &wm->keyconfigs) {
-      wm_keymap_item_properties_update_ot_from_list(&kc->keymaps);
+      wm_keymap_item_properties_update_ot_from_list(&kc->keymaps, keep_properties);
     }
     wm_keymap_update_flag &= ~WM_KEYMAP_UPDATE_OPERATORTYPE;
   }
